--- a/app/views/shared/_ingredients.html.haml
+++ b/app/views/shared/_ingredients.html.haml
@@ -1,12 +1,22 @@
 .activity-ingredients-list#full-ingredients-list{data: {target: ''}}
-  %table.ingredients{:itemprop => "ingredients"}
-    / %thead
-    /   %tr
-    /     %th#ingredient Ingredient
-    /     %th#quantity{colspan: 2}
-    /       %a.change_units{title: "Click to change units"} Quantity
-    /       %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
-    /         %i.icon-question-sign
-    %tbody
+  .ingredients{:itemprop => "ingredients"}
+    .ingredient-table-body
       - ingredients.each do |ingredient|
-        = render '/activities/old_ingredient_row', ingredient: ingredient
+        .ingredient-table-row{data: {:'ingredient-id' => ingredient.ingredient.id}}
+          .ingredient-title
+            .pull-left
+              - if ingredient.product_url?
+                =link_to ingredient.title.html_safe, ingredient.product_url, { class: ('for-sale-after' if ingredient.for_sale), target: "_blank"}
+              - elsif ingredient.sub_activity_id != nil
+                -subact = Activity.find_by_id(ingredient.sub_activity_id)
+                =link_to subact.title.html_safe, activity_path(subact), { target: "_blank", onclick: "addScalingToLink(this);"}
+              - else
+                = ingredient.title.html_safe
+            - if ingredient.note?
+              .pull-left
+                = ", #{apply_shortcodes(ingredient.note).html_safe}"
+          .quantity-group.qtyfade
+            .lbs-qty
+            .lbs-label
+            .main-qty{data: {:"orig-value" => ingredient.display_quantity.to_f * ((ingredient.unit == "kg") ? 1000 : 1)}}= ingredient.display_quantity
+          .unit.qtyfade= ingredient.unit
