--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -12,7 +12,7 @@
         = link_to user_profile_path(current_user), class: 'btn btn-large btn-outline-blue-large' do
           See More
           %i.icon-angle-right
-          
+
     / .span10.stream-wrapper
     /   .stream
     /     .stream-line
@@ -22,9 +22,8 @@
     /       - group_events = group[1]
     /       = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
 
-    .span10.stream-wrapper
+    .span12
       .stream
-        .stream-line
         - current_user.stream.each do |group|
           - group_type = group[0][0]
           - group_name = group[0][1]
