--- a/app/views/activity_stream/like/_create.html.haml
+++ b/app/views/activity_stream/like/_create.html.haml
@@ -5,7 +5,8 @@
 - when 'Upload'
   - media_object_title = 'Photo'
 
-.stream-item  
+.stream-item
+  = render '/activity_stream/shared/stream_item_header', media_object: media_object  
   .stream-item-top
     = link_to media_object do
       .stream-item-title
