--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -13,45 +13,13 @@
           See More
           %i.icon-angle-right
 
-    / .span10.stream-wrapper
-    /   .stream
-    /     .stream-line
-    /     - @stream.each do |group|
-    /       - group_type = group[0][0]
-    /       - group_name = group[0][1]
-    /       - group_events = group[1]
-    /       = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
-
     .span8.offset2
       .stream
-        - current_user.stream.each do |group|
-          - group_type = group[0][0]
-          - group_name = group[0][1]
+        - current_user.followings_stream.each do |group|
           - group_events = group[1]
-          = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
-
-        / - current_user.followings_stream.each do |group|
-        /   - group_type = group[0][0]
-        /   - group_name = group[0][1]
-        /   - group_events = group[1]
-        /   = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
-
-    / .span10.stream-wrapper
-    /   .stream
-    /     .stream-line
-    /     - current_user.followings.first.created_stream.each do |group|
-    /       - group_type = group[0][0]
-    /       - group_name = group[0][1]
-    /       - group_events = group[1]
-    /       = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
-
-    / .span10.stream-wrapper
-    /   .stream
-    /     .stream-line
-    /     - current_user.followings[1].created_stream.each do |group|
-    /       - group_type = group[0][0]
-    /       - group_name = group[0][1]
-    /       - group_events = group[1]
-    /       = render "/activity_stream/#{group_type[0].downcase}/#{group_type[1]}", group_events: group_events
+          - path_array = group[0][0].downcase.split('_')
+          - folder = path_array.first
+          - file = (path_array - [folder]).join('_')
+          = render "/activity_stream/#{folder}/#{file}", group_events: group_events
 
     .span2
