--- a/app/views/activity_stream/comment/_create.html.haml
+++ b/app/views/activity_stream/comment/_create.html.haml
@@ -1,15 +1,15 @@
-- media_object = group_events.first.trackable.commentable
+- media_object = event.trackable.commentable
 .stream-item
   = render '/activity_stream/shared/stream_item_header', media_object: media_object
   .stream-item-top
     = link_to media_object do
       = image_tag filepicker_media_box_image(media_object.image_id)
   .stream-item-bottom
-    %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
+    %p= "#{time_ago_in_words(event.created_at)} ago"
     .stream-item-media1
       .stream-item-media1-user
-        = link_to user_profile_path(group_events.first.trackable.user) do
-          = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
+        = link_to user_profile_path(event.trackable.user) do
+          = image_tag filepicker_circle_image(event.trackable.user.image_id)
       .stream-item-media1-content
-        = link_to group_events.first.trackable.user.name, user_profile_path(group_events.first.trackable.user)
-        = "said, '#{group_events.first.trackable.content}'"
+        = link_to event.trackable.user.name, user_profile_path(event.trackable.user)
+        = "said, '#{event.trackable.content}'"
