--- a/app/views/activity_stream/like/_create.html.haml
+++ b/app/views/activity_stream/like/_create.html.haml
@@ -1,4 +1,4 @@
-- media_object = group_events.first.trackable.likeable
+- media_object = event.trackable.likeable
 - case media_object.class.to_s
 - when 'Activity'
   - media_object_title = media_object.activity_type.first
@@ -11,14 +11,14 @@
     = link_to media_object do
       = image_tag filepicker_media_box_image(media_object.featured_image)
   .stream-item-bottom
-    %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
+    %p= "#{time_ago_in_words(event.created_at)} ago"
     - if media_object.likes_count == 1
       .stream-item-media1
         .stream-item-media1-user
-          = link_to user_profile_path(group_events.first.user) do
-            = image_tag filepicker_circle_image(group_events.first.user.image_id)
+          = link_to user_profile_path(event.user) do
+            = image_tag filepicker_circle_image(event.user.image_id)
         .stream-item-media1-content
-          = link_to group_events.first.user.name, user_profile_path(group_events.first.user)
+          = link_to event.user.name, user_profile_path(event.user)
           = "liked"
           = link_to media_object.title, media_object
           = "."
