--- a/app/views/activity_stream/comment/_create.html.haml
+++ b/app/views/activity_stream/comment/_create.html.haml
@@ -4,7 +4,7 @@
   .stream-item-top
     - if media_object.respond_to?(:image_id)
       = link_to media_object do
-        = image_tag filepicker_media_box_image(media_object.image_id)
+        = image_tag filepicker_stream_image(media_object.image_id)
   .stream-item-bottom
     %p= "#{time_ago_in_words(event.created_at)} ago"
     .stream-item-media1
