--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -19,7 +19,15 @@
     font-size: 50px
     color: white
     margin-top: 140px
+    margin-bottom: -1px
     text-shadow: -1px 1px black
+
+  .profile-email-addr
+    margin-top: -20px
+    margin-left: 5px
+    color: white
+    text-shadow: -1px 1px black
+
 
 .profile-badges
   margin-top: 100px
