--- a/app/views/activities/_assignments.html.haml
+++ b/app/views/activities/_assignments.html.haml
@@ -15,23 +15,7 @@
 .row-fluid
   %hr
 
-.flat-form
-  = form_for @upload do |f|
-    = f.hidden_field :activity_id
-    = f.hidden_field :course_id, value: @course.id
-    .row-fluid
-      .span4
-        %h4 Upload a Photo
-        .upload-wrapper
-          = image_tag '/assets/missing.png', class: "upload-photo-preview"
-          = link_to '+', '#', class: 'upload-photo-btn'
-          %p= f.hidden_field :image_id, class: 'input-block-level upload-photo-field', required: true
-      .span8
-        %h4 Title
-        %p= f.text_field :title, class: 'input-block-level', required: true
-        %h4 Notes
-        %p= f.text_area :notes, rows: 3, class: 'input-block-level', required: true
-        = f.submit 'Upload', class: 'btn btn-primary btn-large'
+= render 'shared/uploads'
 
 .row-fluid      
   %hr
