--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1083,26 +1083,28 @@ a:hover
 
 .social-popover
   position: absolute
-  right: 0px
+  margin-left: 10px
+  left: 100%
+  top:  0px
   z-index: 1000
 
 .bubble
-  position: relative
-  width: 495px
+  position: absolute
+  width: 475px
   height: 70px
   padding: 0px
   background: #FFFFFF
-  border: #7F7F7F solid 2px
-  -webkit-border-radius: 6px
-  -moz-border-radius: 6px
-  border-radius: 6px
+  border: $light-gray solid 2px
+  -webkit-border-radius: 2px
+  -moz-border-radius: 2px
+  border-radius: 2px
   &:after
     content: ""
     position: absolute
-    top: 11px
-    left: -16px
+    top: 7px
+    left: -8px
     border-style: solid
-    border-width: 13px 16px 13px 0
+    border-width: 7px 8px 7px 0
     border-color: transparent #FFFFFF
     display: block
     width: 0
@@ -1110,11 +1112,11 @@ a:hover
   &:before
     content: ""
     position: absolute
-    top: 10px
-    left: -19px
+    top: 7px
+    left: -9px
     border-style: solid
-    border-width: 14px 17px 14px 0
-    border-color: transparent #7F7F7F
+    border-width: 7px 8px 7px 0
+    border-color: transparent $light-gray
     display: block
     width: 0
     z-index: 1000
