--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -5,11 +5,20 @@
   -webkit-box-sizing: border-box
   -o-box-sizing: border-box
 
+=any_shadow($c)
+  box-shadow: $c
+  -moz-box-shadow: $c
+  -webkit-box-shadow: $c
+  -o-box-shadow: $c
+
 =shadow
   box-shadow: 0px 0px 2px #888888
   -moz-box-shadow: 0px 0px 2px #888888
   -webkit-box-shadow: 0px 0px 2px #888888
   -o-box-shadow: 0px 0px 2px #888888
+
+=big-shadow
+  @include any_shadow(5px 5px 15px #888888)
 
 =dark-shadow
   box-shadow: 0px 0px 5px black
