--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -7,19 +7,25 @@
   .btn.btn-primary.relative(ng-click="expandSocial=!expandSocial")
     .icon-share
     Share
-    .social-popover.bubble(ng-show="expandSocial" ng-animate="'fade'")
-      .share-text
-        Share this with your friends!
-      = link_to 'javascript:void(0);', class: 'btn btn-primary btn-social social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true}, onclick: "mixpanel.track('Share Intent Facebook');" do
-        %i.icon-facebook
-      = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "mixpanel.track('Share Intent Google Plus'); javascript:window.open(this.href,
-      '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn btn-primary btn-social' do
-        %i.icon-google-plus
-      = link_to "https://twitter.com/intent/tweet?text=I love this: #{media_object.title} from @ChefSteps!&url=#{ url_encode(current_url(request))}", class: 'btn btn-primary btn-social', onclick: "mixpanel.track('Share Intent Twitter');" do
-        %i.icon-twitter
-      - if media_object.featured_image
-        = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{filepicker_hero_image(media_object.featured_image)}", onclick: "mixpanel.track('Share Intent Pinterest'); javascript:window.open(this.href,
-        '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn btn-primary btn-social' do
-          %i.icon-pinterest
-      %a{href: "mailto:?subject=#{media_object.title.html_safe}%20from%20ChefSteps.com&body=I%20thought%20you%20might%20like%20this:%20#{ url_encode(current_url(request))}", target: "_blank", id: "email-share",class: "btn btn-primary btn-social", onclick: "mixpanel.track('Share Intent Email');"}
-        %i.icon-envelope
+    .social-popover.bubble(ng-show="expandSocial" ng-animate="'spe'")
+      .contents
+        .share-text
+          Share this with your friends!
+        = link_to "https://twitter.com/intent/tweet?text=I love this: #{media_object.title} from @ChefSteps!&url=#{ url_encode(current_url(request))}", class: 'btn btn-secondary btn-social btn-social-twitter', onclick: "mixpanel.track('Share Intent Twitter');" do
+          %i.icon-twitter
+          Twitter
+        = link_to 'javascript:void(0);', class: 'btn btn-secondary btn-social btn-social-facebook social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true}, onclick: "mixpanel.track('Share Intent Facebook');" do
+          %i.icon-facebook
+          Facebook
+        = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "mixpanel.track('Share Intent Google Plus'); javascript:window.open(this.href,
+        '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn btn-secondary btn-social btn-social-gplus' do
+          %i.icon-google-plus
+          Google+
+        - if media_object.featured_image
+          = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{filepicker_hero_image(media_object.featured_image)}", onclick: "mixpanel.track('Share Intent Pinterest'); javascript:window.open(this.href,
+          '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn btn-secondary btn-social btn-social-pinterest' do
+            %i.icon-pinterest
+            Pinterest
+        %a{href: "mailto:?subject=#{media_object.title.html_safe}%20from%20ChefSteps.com&body=I%20thought%20you%20might%20like%20this:%20#{ url_encode(current_url(request))}", target: "_blank", id: "email-share",class: "btn btn-primary btn-social btn-social-email", onclick: "mixpanel.track('Share Intent Email');"}
+          %i.icon-envelope
+          Email
