--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -22,11 +22,14 @@
       /     = render "/activity_stream/#{folder}/#{file}", event: event
       /     %hr
       / = paginate @followings_stream
-      .stream(ng-controller='StreamsController' ng-init="init()" ng-cloak)
+      .stream(ng-controller='StreamsController' ng-init="init()")
         %div(ng-repeat='stream in streams')
           {{stream.group_type}}
-          %div(ng-switch on='stream.group_type')
-          %div(ng-switch when='Comment_create')
+          / %div(ng-include src='stream.templateUrl')
+          %div(ng-switch="stream.group_type")
+            %div(ng-switch-when='Comment_create')
+              %h2 Comment Create!!
+              %div(ng-include src="'client_views/comment_create.html'")
           / = render "/activity_stream/{{stream.trackable_type}}/{{stream.action}}"
 
     .span2
