[streams] comment create

--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -47,6 +47,8 @@
         width: 100%
     .stream-item-bottom
       margin-top: 15px
+      float: left
+      width: 100%
       @include boxsizing
 
 .stream-item-media1
