--- a/app/views/stream_views/comment_create.html.haml
+++ b/app/views/stream_views/comment_create.html.haml
@@ -1,4 +1,5 @@
 %h3 Rendered Comment Create Partial
+{{stream.trackable}}
 / - media_object = event.trackable.commentable
 .stream-item
   .stream-item-header
@@ -14,12 +15,12 @@
     / - if media_object.respond_to?(:image_id)
     /   = link_to media_object do
     /     = image_tag filepicker_stream_image(media_object.image_id)
+    %a(ng-href="/profiles/{{stream.trackable.comment.user.slug}}")
+      %img(ng-src="{{mediaObjectImageUrl(stream.trackable.comment.commentable.image_id)}}")
   .stream-item-bottom
     / %p= "#{time_ago_in_words(event.created_at)} ago"
     .stream-item-media1
       .stream-item-media1-user
-        / = link_to user_profile_path(event.trackable.user) do
-        /   = image_tag filepicker_circle_image(event.trackable.user.image_id)
         %a(ng-href="/profiles/{{tream.trackable.comment.user.slug}}")
           %img(ng-src="{{userImageUrl(tream.trackable.comment.user.image_id)}}")
       .stream-item-media1-content
