--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1049,6 +1049,10 @@ a:hover
     color: white
     cursor: pointer
 
+.btn-social-old
+  width: 40px
+  margin: 0 2px
+
 .btn-social
   margin: 0 2px
   background-color: white
