--- a/app/views/stream_views/comment_create.html.haml
+++ b/app/views/stream_views/comment_create.html.haml
@@ -17,8 +17,8 @@
       {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
     .stream-item-media1
       .stream-item-media1-user
-        %a(ng-href="/profiles/{{tream.trackable.comment.user.slug}}")
-          %img(ng-src="{{userImageUrl(tream.trackable.comment.user.image_id)}}")
+        %a(ng-href="/profiles/{{stream.trackable.comment.user.slug}}")
+          %img(ng-src="{{userImageUrl(stream.trackable.comment.user.image_id)}}")
       .stream-item-media1-content
         %a(ng-href="/profiles/{{stream.trackable.comment.user.slug}}")
           {{stream.trackable.comment.user.name}}
