--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -31,6 +31,8 @@
               %div(ng-include src="'stream_views/comment_create.html'")
             %div(ng-switch-when='Course_enroll')
               %div(ng-include src="'stream_views/course_enroll.html'")
+            %div(ng-switch-when='Like_create')
+              %div(ng-include src="'stream_views/like_create.html'")
           / = render "/activity_stream/{{stream.trackable_type}}/{{stream.action}}"
 
     .span2
