--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -34,7 +34,7 @@
 
       %div(ng-repeat="poll_item in poll.poll_items | orderBy:'-votes_count'" ng-cloak)
         .poll-item
-          .poll-item-vote-up
+          .poll-item-vote-up{onclick: "mixpanel.track('Poll Voted', {'Poll Item': {{poll_item.id}} });"}
             %span(ng-switch on="current_user_voted_for_this(poll_item)")
               %span(ng-switch-when='true')
                 .poll-item-btn.poll-item-btn-voted
