--- a/app/views/stream_views/like_create.html.haml
+++ b/app/views/stream_views/like_create.html.haml
@@ -18,17 +18,21 @@
       %h3
         {{stream.trackable.like.likeable.title}}  
   .stream-item-top
-    / = link_to media_object do
-    /   = image_tag filepicker_stream_image(media_object.featured_image)
+    %a(ng-href="/profiles/{{stream.trackable.like.likeable.slug}}")
+      %img(ng-src="{{mediaObjectImageUrl(stream.trackable.like.likeable.featured_image)}}")
   .stream-item-bottom
-    / %p= "#{time_ago_in_words(event.created_at)} ago"
+    %p
+      {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
     .stream-item-media2
       .stream-item-media2-content
-        / - if media_object.likes_count == 1
-        /   = "1 Like"
-        / - else
-        /   = "#{media_object.likes_count} Likes"
+        %div(ng-switch="stream.trackable.like.likeable.likes_count")
+          %div(ng-switch-when='1')
+            1 Like
+          %div(ng-switch-default)
+            {{stream.trackable.like.likeable.likes_count}} Likes
       .stream-item-media2-users
         / - media_object.likes.each do |like|
         /   = link_to user_profile_path(like.user) do
         /     = image_tag filepicker_circle_image(like.user.image_id)
+        %a(ng-href="/profiles/{{stream.trackable.like.user.slug}}")
+          {{stream.trackable.like.likeable}}
